# Plane

./: .gitignore  ;  CMakeLists.txt  Plane.kdev4  README.md  aviao.h  b.txt  build.sh  campo.h  game.h  main  main.cpp  meson.build  tiro.h
.kdev4/: Plane.kdev4
include/: aviao.h  campo.h  control_and_draw.h  game.h  input.h  menu.h  score.h  tiro.h
src/: aviao.cpp  campo.cpp  control_and_draw.cpp  game.cpp  input.cpp  main.cpp  menu.cpp  score.cpp  tiro.cpp
